# NPSC_project_2

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  delete.h  mesh.h  model.h  shader.h  sphere.h
resources/objects/lady-2/source/model/: model.mtl
resources/objects/the_buddha_statue_in_a_mountain/: the_buddha_statue_in_a_mountain.mtl
shaders/: 2.stencil_testing.vs  4.6.shader.fs  4.6.shader.vs  6.2.1.cubemaps.fs  6.2.cubemaps.fs  6.2.cubemaps.vs  instanced.object.model.shader.fs  instanced.object.model.shader.vs  object.box.shader.fs  object.box.shader.vs  object.model.shader.fs  object.model.shader.vs  structured.light.cube.shader.vs  structured.object.model.shader.vs  structured.skybox.vs
shaders.2/: 2.instanced.object.model.shader.fs  3.1.1.debug_quad_depth.fs  instanced.object.model.shader.fs  instanced.object.model.shader.vs  light.cube.shader.fs  structured.object.model.shader.vs
src/: cubemap.cpp  cubemap_r.cpp  gamma.cpp  highlight.cpp  instanced.cpp  main.cpp  main_light.cpp  main_model_light.cpp  new_lighting.cpp  shadow.cpp  simulation.cpp
